--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,8 @@
             "php-http/discovery": true
         },
         "platform": {
-            "php": "8.2.0"
+            "php": "8.2.0",
+            "ext-redis": "5.3.7"
         }
     },
     "minimum-stability": "stable",
